[package]
name = "git-prompt-rs"
version = "0.1.0"
about = "Git prompt command line to show git status in commandline prompt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
git2 = "0.15.0"
